[package]
name = "instant-compiler"
version = "0.1.0"
authors = ["Tomasz Miśków <miskow.tomasz@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "instant_compiler"
path = "src/lib.rs"

[build-dependencies]
lalrpop = {version = "0.19", features = ["lexer"]}

[dependencies]
lalrpop-util = "0.19"
regex = "1"
